--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "blueimp-gallery",
   "version": "2.21.3",
   "title": "blueimp Gallery",
-  "description": "blueimp Gallery is a touch-enabled, responsive and customizable image and video gallery, carousel and lightbox, optimized for both mobile and desktop web browsers. It features swipe, mouse and keyboard navigation, transition effects, slideshow functionality, fullscreen support and on-demand content loading and can be extended to display additional content types.",
+  "description": "מכירה E46 330i BMW שנת 2001 יבוא אישי מגרמניה 215,000 קמ 
+מנוע  2979 סמק M54  גיר ידני 5 הילוכים  יד 3 (הרכב אצלי מסוף 2011)
+גג שמש מקורי תריס חשמתי לחלון אחורי 
+שליטה מההגה על המערכת בקרת שיוט 
+פנסי לד מאחור פנסי angle eye כולל מנוע מלפנים 
+מטופלת אצל e&a autosport 
+מנוע נקי ללא שיפורים וללא שינויים 
+רדיאטור חדש מ 2016 מצבר Bosh  חדש מ 2016 
+לפרטים גיל 054-5544030 60,000 שח לא גמיש",
   "keywords": [
     "image",
     "video",
